@@ -9,14 +9,17 @@ import static pairmatching.model.crew.Mission.RACING_CAR;
 import static pairmatching.model.crew.Mission.SHOPPING_BASKET;
 import static pairmatching.model.crew.Mission.SUBWAY_LINE;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public enum Level {
-    LEVEL1("레벨1", List.of(RACING_CAR, LOTTO, NUMBER_BASEBALL)),
-    LEVEL2("레벨2", List.of(SHOPPING_BASKET, PAYMENT, SUBWAY_LINE)),
-    LEVEL3("레벨3", List.of()),
-    LEVEL4("레벨4", List.of(IMPROVEMENT, DEPLOYMENT)),
-    LEVEL5("레벨5", List.of());
+    LEVEL1("레벨1", Arrays.asList(RACING_CAR, LOTTO, NUMBER_BASEBALL)),
+    LEVEL2("레벨2", Arrays.asList(SHOPPING_BASKET, PAYMENT, SUBWAY_LINE)),
+    LEVEL3("레벨3", Collections.emptyList()),
+    LEVEL4("레벨4", Arrays.asList(IMPROVEMENT, DEPLOYMENT)),
+    LEVEL5("레벨5", Collections.emptyList());
 
     private String name;
     private List<Mission> missions;
